[package]
name = "surl"
version = "0.1.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
md5 = "0.7.0"
redis = { version = "0.23.3", features = ["r2d2", "tls-native-tls"] }
r2d2 = "0.8.10"
dotenvy = "0.15.7"
